<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expence Manager</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="btn_add">Add</string>

    <string name="activity_stage_title">Activity Transition Stage</string>

    <string name="activity_account">Account</string>

    <string name="first_activity">First Activity</string>

    <string name="second_activity">Second Activity</string>

    <string name="btn_next_screen">Go to next screen</string>

    <string name="activity_about">About</string>

    <string name="about_team_name">Angry Beavers</string>

    <string name="about_info">Specially for GDG Lviv Hackaday 2014</string>

    <string name="new_expenses_group">New Expenses Group</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="currency">Currency</string>
    <string name="initial_balance">Initial Balance</string>
    <string name="auto_and_mileage">Auto and Mileage</string>

    <string name="new_expense">New Expense</string>

</resources>
